objects/Shipment__c.object
<CustomObject>
    <description>This includes details of the Sender, Recipient, Package, Delivery Service, and Billing aspects of shipping a package.</description>
    <fields>
        <fullName>Accept_Billing_Agreement__c</fullName>
        <label>Accept Billing Agreement?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Add_Default_Insurance__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Updated by code.</inlineHelpText>
        <label>Add Default Insurance?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address_Classification__c</fullName>
        <label>Address Classification</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Validation__c</fullName>
        <inlineHelpText>Updated by code when address is validated</inlineHelpText>
        <label>Address Validation</label>
        <picklist>
            <picklistValues>
                <fullName>Change Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Authorization_Reason__c</fullName>
        <inlineHelpText>Additional info about the authorization or denial</inlineHelpText>
        <label>Authorization Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Authorization_Request_Date__c</fullName>
        <inlineHelpText>Date/Time when the request was sent</inlineHelpText>
        <label>Authorization Request Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Authorization_Requested_From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Authorization Requested From</label>
        <referenceTo>User</referenceTo>
        <relationshipName>UserShipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Authorization_Response_Date__c</fullName>
        <inlineHelpText>Date/Time when the response to the authorization request is received.</inlineHelpText>
        <label>Authorization Response Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Authorization_Status__c</fullName>
        <label>Authorization Status</label>
        <picklist>
            <picklistValues>
                <fullName>Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Authorized</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invalid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Authorization Needed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Authorized_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>User who responded to the authorization request.</inlineHelpText>
        <label>Authorized By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Shipments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bill_To__c</fullName>
        <inlineHelpText>Populated by automation</inlineHelpText>
        <label>Bill To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Batch_Id__c</fullName>
        <inlineHelpText>Identifier for internal billing process.</inlineHelpText>
        <label>Billing Batch Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Status__c</fullName>
        <label>Billing Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Billed</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Billed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Billing_Type__c</fullName>
        <label>Billing Type</label>
        <picklist>
            <picklistValues>
                <fullName>Department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Carrier_Code__c</fullName>
        <inlineHelpText>Indicates the carrier that will be used to deliver this shipment</inlineHelpText>
        <label>Carrier Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Declared_Value__c</fullName>
        <label>Declared Value</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Delivery_Attempt_Exception__c</fullName>
        <inlineHelpText>Based on Delivery Attempt Excpt Code</inlineHelpText>
        <label>Delivery Attempt Exception</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Attempt_Excpt_Code__c</fullName>
        <inlineHelpText>From Vendor File</inlineHelpText>
        <label>Delivery Attempt Excpt Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Date_Actual__c</fullName>
        <inlineHelpText>Updated from billing report</inlineHelpText>
        <label>Delivery Date Actual</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Delivery_Date_Text__c</fullName>
        <description>Hold delivery date for ground services. Ground services return delivery date in enumeration constant to which we convert a normal string and store in it.</description>
        <label>Delivery Date Text</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Date__c</fullName>
        <inlineHelpText>Estimated delivery date based on user selections.</inlineHelpText>
        <label>Delivery Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Delivery_Ineligible_For_Guarantee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delivery Ineligible For Guarantee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delivery_Service_Description__c</fullName>
        <label>Delivery Service Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dept_Number__c</fullName>
        <inlineHelpText>Department Number, from Vendor file</inlineHelpText>
        <label>Dept Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dimension_UOM__c</fullName>
        <inlineHelpText>Unit of Measurement for dimensions</inlineHelpText>
        <label>Dimension UOM</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EDI_Batch_Id__c</fullName>
        <inlineHelpText>Identifier from imported EDI billing file.</inlineHelpText>
        <label>EDI Batch Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Est_Delivery_Date__c</fullName>
        <inlineHelpText>Vendor 
Estimated Delivery Date</inlineHelpText>
        <label>Est Delivery Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Hold_Shipment_at_FedEx_Location__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Personal shipping option only</inlineHelpText>
        <label>Hold Shipment at FedEx Location?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Insurance_Amount__c</fullName>
        <inlineHelpText>Portion of total for insurance</inlineHelpText>
        <label>Insurance Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Internal_Id__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Internal Unique Identification Number</inlineHelpText>
        <label>Internal Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <description>Created for CR-20150505-8937.</description>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <inlineHelpText>Invoice Number, from Vendor file</inlineHelpText>
        <label>Invoice Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label_Printed_Date__c</fullName>
        <inlineHelpText>DateTime when label was printed</inlineHelpText>
        <label>Label Printed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Status_Code__c</fullName>
        <inlineHelpText>Status Code from Last Event update, from Vendor file</inlineHelpText>
        <label>Last Status Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Status_Date__c</fullName>
        <inlineHelpText>Timestamp of last status event update from Vendor</inlineHelpText>
        <label>Last Status Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Status__c</fullName>
        <inlineHelpText>Based on Last Status Code</inlineHelpText>
        <label>Last Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <inlineHelpText>Purchase Order Number, from Vendor file</inlineHelpText>
        <label>PO Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package_Actual__c</fullName>
        <inlineHelpText>Actual Package type used, based on Package Code</inlineHelpText>
        <label>Package Actual</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package_Code__c</fullName>
        <inlineHelpText>Package Code from Vendor file</inlineHelpText>
        <label>Package Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package_Depth_in__c</fullName>
        <label>Package Height (in.)</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Package_Height_Actual__c</fullName>
        <inlineHelpText>Actual Package height, from Vendor file</inlineHelpText>
        <label>Package Height Actual</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Package_Length_Actual__c</fullName>
        <inlineHelpText>Actual Package length, from Vendor file</inlineHelpText>
        <label>Package Length Actual</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Package_Length_in__c</fullName>
        <label>Package Length (in.)</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Package_Type__c</fullName>
        <label>Package Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package_Width_Actual__c</fullName>
        <inlineHelpText>Actual Package width, from Vendor file</inlineHelpText>
        <label>Package Width Actual</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Package_Width_in__c</fullName>
        <label>Package Width (in.)</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Personal_Billing__c</fullName>
        <formula>IF(  ISPICKVAL( Billing_Type__c , &apos;Personal&apos;) , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>TRUE if Billing Type = Personal.  
Helps with reporting</inlineHelpText>
        <label>Personal Billing?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recipient_Address_Line_1__c</fullName>
        <inlineHelpText>Populated from selected Contact, if any</inlineHelpText>
        <label>Recipient Address Line 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Address_Line_2__c</fullName>
        <inlineHelpText>Populated from selected Contact, if any</inlineHelpText>
        <label>Recipient Address Line 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Address_Line_3__c</fullName>
        <label>Recipient Address Line 3</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_City__c</fullName>
        <inlineHelpText>Populated from selected Contact, if any</inlineHelpText>
        <label>Recipient City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Company__c</fullName>
        <inlineHelpText>Populated from selected Contact Institution, if Recipient is a Salesforce Contact</inlineHelpText>
        <label>Recipient Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Country_Code__c</fullName>
        <label>Recipient Country Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Email__c</fullName>
        <inlineHelpText>Populated from selected Contact, if any</inlineHelpText>
        <label>Recipient Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Recipient_First_Name__c</fullName>
        <inlineHelpText>Populated from selected Contact, if any</inlineHelpText>
        <label>Recipient First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Last_Name__c</fullName>
        <inlineHelpText>Populated from selected Contact, if any</inlineHelpText>
        <label>Recipient Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Name__c</fullName>
        <inlineHelpText>Recipient Full Name</inlineHelpText>
        <label>Recipient Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Phone__c</fullName>
        <inlineHelpText>Populated from selected Contact, if any</inlineHelpText>
        <label>Recipient Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Recipient_PostalCode__c</fullName>
        <inlineHelpText>Populated from selected Contact, if any</inlineHelpText>
        <label>Recipient PostalCode</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Selection_Method__c</fullName>
        <inlineHelpText>Populated by code</inlineHelpText>
        <label>Recipient Selection Method</label>
        <picklist>
            <picklistValues>
                <fullName>Contact Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Record</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual Entry</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recipient_State_Province__c</fullName>
        <inlineHelpText>Populated from selected Contact, if any</inlineHelpText>
        <label>Recipient State/Province</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recipient</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Shipments</relationshipLabel>
        <relationshipName>Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reference_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Updated by code in ShipItHelper class</description>
        <externalId>true</externalId>
        <inlineHelpText>Reference Id placed on shipping labels</inlineHelpText>
        <label>Reference Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Sender_Account_Number__c</fullName>
        <inlineHelpText>Updated from Vendor file</inlineHelpText>
        <label>Sender Account Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sender_Address_Line_1__c</fullName>
        <inlineHelpText>Populated from current user’s Office, or from User if Remote</inlineHelpText>
        <label>Sender Address Line 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sender_Address_Line_2__c</fullName>
        <label>Sender Address Line 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sender_Address_Line_3__c</fullName>
        <label>Sender Address Line 3</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sender_City__c</fullName>
        <inlineHelpText>Populated from current user’s Office, or from User if Remote</inlineHelpText>
        <label>Sender City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sender_Company__c</fullName>
        <defaultValue>&apos;The Advisory Board Company&apos;</defaultValue>
        <label>Sender Company</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sender_Cost_Center__c</fullName>
        <inlineHelpText>Populated from current user</inlineHelpText>
        <label>Sender Cost Center</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sender_Country_Code__c</fullName>
        <label>Sender Country Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sender_Department__c</fullName>
        <inlineHelpText>Populated from current user</inlineHelpText>
        <label>Sender Department</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sender_Email__c</fullName>
        <inlineHelpText>Populated from current user</inlineHelpText>
        <label>Sender Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Sender_Finance_Code__c</fullName>
        <inlineHelpText>Populated from current user</inlineHelpText>
        <label>Sender  Finance Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sender_First_Name__c</fullName>
        <inlineHelpText>Populated from current user</inlineHelpText>
        <label>Sender First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sender_Last_Name__c</fullName>
        <inlineHelpText>Populated from current user</inlineHelpText>
        <label>Sender Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sender_Name__c</fullName>
        <inlineHelpText>Sender Full Name</inlineHelpText>
        <label>Sender Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sender_Office_Code__c</fullName>
        <inlineHelpText>Populated from current user</inlineHelpText>
        <label>Sender Office Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sender_Office_Name__c</fullName>
        <inlineHelpText>Populated from current user</inlineHelpText>
        <label>Sender Office Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sender_Phone__c</fullName>
        <inlineHelpText>Populated from current user</inlineHelpText>
        <label>Sender Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Sender_PostalCode__c</fullName>
        <inlineHelpText>Populated from current user’s Office, or from User if Remote</inlineHelpText>
        <label>Sender PostalCode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sender_Secondary_Email__c</fullName>
        <inlineHelpText>Enter a secondary address to received notices</inlineHelpText>
        <label>Sender Secondary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Sender_State_Province__c</fullName>
        <inlineHelpText>Populated from current user’s Office, or from User if Remote</inlineHelpText>
        <label>Sender State / Province</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sender__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sender</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Actual__c</fullName>
        <inlineHelpText>Actual Service used by Vendor, based on Service Code</inlineHelpText>
        <label>Service Actual</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Code__c</fullName>
        <inlineHelpText>Service code for Shipment Method from Vendor file</inlineHelpText>
        <label>Service Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Amount_Actual__c</fullName>
        <inlineHelpText>Updated from billing report</inlineHelpText>
        <label>Ship Amount Actual</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ship_Amount__c</fullName>
        <inlineHelpText>Total for shipping service based on user selections</inlineHelpText>
        <label>Ship Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ship_Date_Actual__c</fullName>
        <inlineHelpText>Updated from billing report</inlineHelpText>
        <label>Ship Date Actual</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ship_Date__c</fullName>
        <description>Updated by user selection of Ship Day</description>
        <inlineHelpText>After 5pm, the package may not be picked up by FedEx until the next business day.  Pickup time may vary by location.</inlineHelpText>
        <label>Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ship_Day__c</fullName>
        <inlineHelpText>Date the package will be picked up for shipping</inlineHelpText>
        <label>Ship Day</label>
        <picklist>
            <picklistValues>
                <fullName>Today</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Next Business Day</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ship_Freight_Amount__c</fullName>
        <inlineHelpText>Portion of the total for the package</inlineHelpText>
        <label>Ship Freight Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ship_Method_Category__c</fullName>
        <inlineHelpText>Populated from custom setting based on Ship Method</inlineHelpText>
        <label>Ship Method Category</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Method__c</fullName>
        <label>Ship Method</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Surcharges__c</fullName>
        <inlineHelpText>Portion of the total going toward surcharges</inlineHelpText>
        <label>Ship Surcharges</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ship_Taxes__c</fullName>
        <inlineHelpText>Portion of the total going toward taxes</inlineHelpText>
        <label>Ship Taxes</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ship_Vendor_Amount__c</fullName>
        <inlineHelpText>Total charges from Vendor – should amount to Ship Freight Amount + Ship Surcharges</inlineHelpText>
        <label>Ship Vendor Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Shipment_Id__c</fullName>
        <inlineHelpText>Shipment Id, from Vendor file</inlineHelpText>
        <label>Shipment Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Type_Code__c</fullName>
        <inlineHelpText>Vendor Company Shipping Code</inlineHelpText>
        <label>Shipping Type Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Type__c</fullName>
        <inlineHelpText>Vendor Company Shipping Type</inlineHelpText>
        <label>Shipping Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signature_Requirement__c</fullName>
        <inlineHelpText>Personal shipping option only</inlineHelpText>
        <label>Signature Requirement</label>
        <picklist>
            <picklistValues>
                <fullName>Adult Signature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Signature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indirect Signature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signature Not Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <inlineHelpText>Indicates where this record originated – either in the ShipIt app or externally, from the Vendor</inlineHelpText>
        <label>Source</label>
        <picklist>
            <picklistValues>
                <fullName>ShipIt</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Vendor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Special_Handling_1__c</fullName>
        <inlineHelpText>Based on Special Handling Code 1</inlineHelpText>
        <label>Special Handling 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Handling_2__c</fullName>
        <inlineHelpText>Based on Special Handling Code 2</inlineHelpText>
        <label>Special Handling 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Handling_3__c</fullName>
        <inlineHelpText>Based on Special Handling Code 3</inlineHelpText>
        <label>Special Handling 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Handling_Code_1__c</fullName>
        <inlineHelpText>Code from Vendor File</inlineHelpText>
        <label>Special Handling Code 1</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Handling_Code_2__c</fullName>
        <inlineHelpText>Code from Vendor file</inlineHelpText>
        <label>Special Handling Code 2</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Handling_Code_3__c</fullName>
        <inlineHelpText>Code from Vendor file</inlineHelpText>
        <label>Special Handling Code 3</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Event_Additional_Info__c</fullName>
        <inlineHelpText>More info from Last Status Event, from Vendor file</inlineHelpText>
        <label>Status Event Additional Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Event_City__c</fullName>
        <inlineHelpText>Location of Last Status Event, from Vendor file</inlineHelpText>
        <label>Status Event City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Event_Country__c</fullName>
        <inlineHelpText>Location of Last Status Event, from Vendor file</inlineHelpText>
        <label>Status Event Country</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Event_State__c</fullName>
        <inlineHelpText>Location of Last Status Event, from Vendor file</inlineHelpText>
        <label>Status Event State</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>New (Stages 1-3),In Progress (Stages 4-6),Shipped (Stages 7-8),Billed (Stages 9-10),Cancelled.</description>
        <inlineHelpText>Updated by code</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Authorization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready to Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Label Printed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Pieces_Qty__c</fullName>
        <inlineHelpText>Total number of packages in shipment, from Vendor file</inlineHelpText>
        <label>Total Pieces (Qty)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tracking_Number__c</fullName>
        <label>Tracking Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_JobId__c</fullName>
        <inlineHelpText>Capture the JobId of the processed shipping request from FedEx, which is returned in the ProcessShipmentReply</inlineHelpText>
        <label>Vendor JobId</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Package__c</fullName>
        <formula>IF( CONTAINS( Package_Type__c , &apos;FedEx&apos;) , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor Package?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Weight_Actual__c</fullName>
        <inlineHelpText>Updated from billing report</inlineHelpText>
        <label>Weight Actual</label>
        <precision>10</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weight_Estimated__c</fullName>
        <inlineHelpText>Updated by user</inlineHelpText>
        <label>Weight Estimated</label>
        <precision>10</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weight_UOM__c</fullName>
        <inlineHelpText>Unit of Measurement for weight</inlineHelpText>
        <label>Weight UOM</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Shipment</label>
    <listViews>
        <fullName>All_Shipments</fullName>
        <columns>Billing_Type__c</columns>
        <columns>NAME</columns>
        <columns>Sender__c</columns>
        <columns>Recipient__c</columns>
        <columns>Status__c</columns>
        <columns>Ship_Date__c</columns>
        <columns>Tracking_Number__c</columns>
        <columns>Ship_Method__c</columns>
        <columns>Source__c</columns>
        <columns>Billing_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Shipments</label>
    </listViews>
    <listViews>
        <fullName>Del_Date_Department_Last_30_Days</fullName>
        <columns>Billing_Type__c</columns>
        <columns>Billing_Status__c</columns>
        <columns>NAME</columns>
        <columns>Sender__c</columns>
        <columns>Recipient__c</columns>
        <columns>Ship_Date__c</columns>
        <columns>Ship_Method__c</columns>
        <columns>Est_Delivery_Date__c</columns>
        <columns>Delivery_Date__c</columns>
        <columns>Delivery_Date_Actual__c</columns>
        <columns>Delivery_Date_Text__c</columns>
        <columns>Ship_Date_Actual__c</columns>
        <columns>Ship_Day__c</columns>
        <columns>Last_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Ship_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <filters>
            <field>Ship_Method__c</field>
            <operation>contains</operation>
            <value>GROUND</value>
        </filters>
        <label>Del Date - Department – Last 30 Days</label>
    </listViews>
</CustomObject>